--- a/_assets/site.scss
+++ b/_assets/site.scss
@@ -3,10 +3,10 @@
 @import "bootstrap/scss/variables";
 @import "bootstrap/scss/mixins";
 
-$header-image: "./img/evo-chanelle-macey-hero.jpg";
+$header-image: "./img/evo-key-pro-bonds-hero.jpg";
 $contact-image: "./img/contact.png";
 
-$primary: #00ACC8;
+$primary: #1bacc6;
 $white: #fff;
 $black: #000;
 $input-height:calc(#{$input-height-inner} + #{$input-height-border});
