--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,11 +3,15 @@ layout: default
 ---
 {% include navheader.html %}
 
+{% include textblock.html %}
+
 {% include textblock-lite.html %}
 
 {% include services.html %}
 
 {% include clients.html %}
+
+{% include about.html %}
 
 {% include testimonials.html %}
 
