--- a/_assets/site.scss
+++ b/_assets/site.scss
@@ -3,7 +3,7 @@
 @import "bootstrap/scss/variables";
 @import "bootstrap/scss/mixins";
 
-$header-image: "./img/evo-key-pro-bonds-header.jpg";
+$header-image: "./img/evo-key-pro-bonds-header.png";
 $contact-image: "./img/contact.png";
 
 $primary: #1bacc6;
