--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,7 +26,7 @@
         <div class="col-md-4">
           <ul class="list-inline quicklinks">
             <li class="list-inline-item">
-              <a href="https://evohomeloans.co.za/bond-originator/xxx/"
+              <a href="https://evohomeloans.co.za/bond-originator/"
                 target="_blank">{{ site.data.sitetext.footer.legal | default: "" }}</a>
             </li>
           </ul>
